--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
       <td>
         <h1>Harun Ericek</h1>
         <em>
-          <p>Dachdecker</p>
-          <p>Anlagenführer</p>
-          <p>Prozessoptimierer</p>
-          <p>angehender Fullstack Website Developer</p>
+          <p>Operator Palettierung Intersnack</p>
+          <p>Ich liebe es mit Excel zu arbeiten um alltägliche Probleme zu lösen. Jetzt bin ich auf den Geschmack gekommen und werde <strong>Full Stack Web Developer</strong></p>
         </em>
       </td>
     </tr>
   </table>
+  
   
   <!-- Bildung und Werdegang-->
   
