--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
   <table cellspacing="20">
     <tr>
-      <td><img src="/Users/harunericek/Downloads/Harun.JPG" alt="Mein Profilbild" height="400" width="300"></td>
+      <td><img src="Harun.JPG" alt="Mein Profilbild" height="400" width="300"></td>
       <td>
         <h1>Harun Ericek</h1>
         <em>
